--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			grid-template-rows: 32px auto 300px 32px;
 			width: 100vw;
 			height: 100vh;
-			background: #2196f3;
+			background: red;
 			overflow: scroll;
 		}
 		#top-frame{
